charactersページ作成

--- a/src/characters.html
+++ b/src/characters.html
@@ -174,8 +174,8 @@
                 <div class="lower__textInner">
                     <p class="lower__textInner--text">キャラクター（従業員）は、<br>
                         家族同様に社長から愛情と信頼を頂き、<br>
-                        日々の引越業務を楽しくそしてまじめをモットーに精進しています。<br>
-                        そんなたかくら引越センターのキャラクター（高倉社長を含む）を<br>
+                        日々の引越業務を楽しくそして<br class="sp-br">まじめをモットーに精進しています。<br>
+                        そんなたかくら引越センターの<br class="sp-br">キャラクター（高倉社長を含む）を<br>
                         ここに紹介させて頂きます。
                     </p>
                 </div>
@@ -202,136 +202,283 @@
                     </div>
                     <div class="member__item">
                         <div class="member__img">
-                            <img src="./assets/images/characters/member_img1.png" alt="メンバー紹介画像">
+                            <img src="./assets/images/characters/member_sample.svg" alt="メンバー紹介画像">
                         </div>
                         <div class="member__tag">
-                            <span>BOSS<span>
+                            <span>STAFF<span>
                         </div>
                         <div class="member__name">
-                            <p class="member__name--kanji">高倉 弘樹</p>
-                            <p class="member__name--romaji">TAKAKURA KOUKI</p>
+                            <p class="member__name--kanji">杉山 寛</p>
+                            <p class="member__name--romaji">SUGIYAMA HIROSHI</p>
                         </div>
                         <div class="member__discription">
                             <p class="member__discription--title">好きな家具</p>
-                            <p class="member__discription--text">テキストテキストテキスト</p>
+                            <p class="member__discription--text">衣装ケース（3段以内）</p>
                         </div>
                     </div>
                     <div class="member__item">
                         <div class="member__img">
-                            <img src="./assets/images/characters/member_img1.png" alt="メンバー紹介画像">
+                            <img src="./assets/images/characters/member_sample.svg" alt="メンバー紹介画像">
                         </div>
                         <div class="member__tag">
-                            <span>BOSS<span>
+                            <span>STAFF<span>
                         </div>
                         <div class="member__name">
-                            <p class="member__name--kanji">高倉 弘樹</p>
-                            <p class="member__name--romaji">TAKAKURA KOUKI</p>
+                            <p class="member__name--kanji">金沢 将志</p>
+                            <p class="member__name--romaji">KANAZAWA MASASHI</p>
                         </div>
                         <div class="member__discription">
                             <p class="member__discription--title">好きな家具</p>
-                            <p class="member__discription--text">テキストテキストテキスト</p>
+                            <p class="member__discription--text">テレビ</p>
                         </div>
                     </div>
                     <div class="member__item">
                         <div class="member__img">
-                            <img src="./assets/images/characters/member_img1.png" alt="メンバー紹介画像">
+                            <img src="./assets/images/characters/member_sample.svg" alt="メンバー紹介画像">
                         </div>
                         <div class="member__tag">
-                            <span>BOSS<span>
+                            <span>STAFF<span>
                         </div>
                         <div class="member__name">
-                            <p class="member__name--kanji">高倉 弘樹</p>
-                            <p class="member__name--romaji">TAKAKURA KOUKI</p>
+                            <p class="member__name--kanji">扇原 一</p>
+                            <p class="member__name--romaji">OGIHARA HAJIME</p>
                         </div>
                         <div class="member__discription">
                             <p class="member__discription--title">好きな家具</p>
-                            <p class="member__discription--text">テキストテキストテキスト</p>
+                            <p class="member__discription--text">オットマン</p>
                         </div>
                     </div>
                     <div class="member__item">
                         <div class="member__img">
-                            <img src="./assets/images/characters/member_img1.png" alt="メンバー紹介画像">
+                            <img src="./assets/images/characters/member_sample.svg" alt="メンバー紹介画像">
                         </div>
                         <div class="member__tag">
-                            <span>BOSS<span>
+                            <span>STAFF<span>
                         </div>
                         <div class="member__name">
-                            <p class="member__name--kanji">高倉 弘樹</p>
-                            <p class="member__name--romaji">TAKAKURA KOUKI</p>
+                            <p class="member__name--kanji">外山 将斗</p>
+                            <p class="member__name--romaji">TOYAMA MASATO</p>
                         </div>
                         <div class="member__discription">
                             <p class="member__discription--title">好きな家具</p>
-                            <p class="member__discription--text">テキストテキストテキスト</p>
+                            <p class="member__discription--text">カラーボックス</p>
                         </div>
                     </div>
                     <div class="member__item">
                         <div class="member__img">
-                            <img src="./assets/images/characters/member_img1.png" alt="メンバー紹介画像">
+                            <img src="./assets/images/characters/member_sample.svg" alt="メンバー紹介画像">
                         </div>
                         <div class="member__tag">
-                            <span>BOSS<span>
+                            <span>STAFF<span>
                         </div>
                         <div class="member__name">
-                            <p class="member__name--kanji">高倉 弘樹</p>
-                            <p class="member__name--romaji">TAKAKURA KOUKI</p>
+                            <p class="member__name--kanji">安藤 はるか</p>
+                            <p class="member__name--romaji">ANDO HARUKA</p>
                         </div>
                         <div class="member__discription">
                             <p class="member__discription--title">好きな家具</p>
-                            <p class="member__discription--text">テキストテキストテキスト</p>
+                            <p class="member__discription--text">デスク</p>
                         </div>
                     </div>
                     <div class="member__item">
                         <div class="member__img">
-                            <img src="./assets/images/characters/member_img1.png" alt="メンバー紹介画像">
+                            <img src="./assets/images/characters/member_sample.svg" alt="メンバー紹介画像">
                         </div>
                         <div class="member__tag">
-                            <span>BOSS<span>
+                            <span>STAFF<span>
                         </div>
                         <div class="member__name">
-                            <p class="member__name--kanji">高倉 弘樹</p>
-                            <p class="member__name--romaji">TAKAKURA KOUKI</p>
+                            <p class="member__name--kanji">尾作 泰央</p>
+                            <p class="member__name--romaji">OSAKU YASUO</p>
                         </div>
                         <div class="member__discription">
                             <p class="member__discription--title">好きな家具</p>
-                            <p class="member__discription--text">テキストテキストテキスト</p>
+                            <p class="member__discription--text">二層式洗濯機</p>
                         </div>
                     </div>
                     <div class="member__item">
                         <div class="member__img">
-                            <img src="./assets/images/characters/member_img1.png" alt="メンバー紹介画像">
+                            <img src="./assets/images/characters/member_sample.svg" alt="メンバー紹介画像">
                         </div>
                         <div class="member__tag">
-                            <span>BOSS<span>
+                            <span>STAFF<span>
                         </div>
                         <div class="member__name">
-                            <p class="member__name--kanji">高倉 弘樹</p>
-                            <p class="member__name--romaji">TAKAKURA KOUKI</p>
+                            <p class="member__name--kanji">田所 祐哉</p>
+                            <p class="member__name--romaji">TADOKORO YUYA</p>
                         </div>
                         <div class="member__discription">
                             <p class="member__discription--title">好きな家具</p>
-                            <p class="member__discription--text">テキストテキストテキスト</p>
+                            <p class="member__discription--text">冷蔵庫</p>
                         </div>
                     </div>
                     <div class="member__item">
                         <div class="member__img">
-                            <img src="./assets/images/characters/member_img1.png" alt="メンバー紹介画像">
+                            <img src="./assets/images/characters/member_chara.svg" alt="メンバー紹介画像">
                         </div>
                         <div class="member__tag">
-                            <span>BOSS<span>
+                            <span>キャラクター<span>
                         </div>
                         <div class="member__name">
-                            <p class="member__name--kanji">高倉 弘樹</p>
-                            <p class="member__name--romaji">TAKAKURA KOUKI</p>
+                            <p class="member__name--kanji">たかくらくん（仮）</p>
+                            <p class="member__name--romaji">TAKAKURA KUN</p>
                         </div>
-                        <div class="member__discription">
-                            <p class="member__discription--title">好きな家具</p>
-                            <p class="member__discription--text">テキストテキストテキスト</p>
+                        <div class="member__discription chara">
+                            <p class="member__discription--text">社長をイメージして考えられた「たかくら引越センター」になくてはならないキャラクター。お名前募集中！</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="slider__wrap">
+                    <div class="border__frame"><div class="imgItem__frame"></div><div class="imgItem__bg"></div><div class="slideItem__frame"></div></div>
+                    <div class="member__spSlider">
+                        <div class="member__item">
+                            <div class="member__img">
+                                <img src="./assets/images/characters/member_img1.png" alt="メンバー紹介画像">
+                            </div>
+                            <div class="member__tag">
+                                <span>BOSS<span>
+                            </div>
+                            <div class="member__name">
+                                <p class="member__name--kanji">高倉 弘樹</p>
+                                <p class="member__name--romaji">TAKAKURA KOUKI</p>
+                            </div>
+                            <div class="member__discription">
+                                <p class="member__discription--title">好きな家具</p>
+                                <p class="member__discription--text">テキストテキストテキスト</p>
+                            </div>
+                        </div>
+                        <div class="member__item">
+                            <div class="member__img">
+                                <img src="./assets/images/characters/member_sample.svg" alt="メンバー紹介画像">
+                            </div>
+                            <div class="member__tag">
+                                <span>STAFF<span>
+                            </div>
+                            <div class="member__name">
+                                <p class="member__name--kanji">杉山 寛</p>
+                                <p class="member__name--romaji">SUGIYAMA HIROSHI</p>
+                            </div>
+                            <div class="member__discription">
+                                <p class="member__discription--title">好きな家具</p>
+                                <p class="member__discription--text">衣装ケース（3段以内）</p>
+                            </div>
+                        </div>
+                        <div class="member__item">
+                            <div class="member__img">
+                                <img src="./assets/images/characters/member_sample.svg" alt="メンバー紹介画像">
+                            </div>
+                            <div class="member__tag">
+                                <span>STAFF<span>
+                            </div>
+                            <div class="member__name">
+                                <p class="member__name--kanji">金沢 将志</p>
+                                <p class="member__name--romaji">KANAZAWA MASASHI</p>
+                            </div>
+                            <div class="member__discription">
+                                <p class="member__discription--title">好きな家具</p>
+                                <p class="member__discription--text">テレビ</p>
+                            </div>
+                        </div>
+                        <div class="member__item">
+                            <div class="member__img">
+                                <img src="./assets/images/characters/member_sample.svg" alt="メンバー紹介画像">
+                            </div>
+                            <div class="member__tag">
+                                <span>STAFF<span>
+                            </div>
+                            <div class="member__name">
+                                <p class="member__name--kanji">扇原 一</p>
+                                <p class="member__name--romaji">OGIHARA HAJIME</p>
+                            </div>
+                            <div class="member__discription">
+                                <p class="member__discription--title">好きな家具</p>
+                                <p class="member__discription--text">オットマン</p>
+                            </div>
+                        </div>
+                        <div class="member__item">
+                            <div class="member__img">
+                                <img src="./assets/images/characters/member_sample.svg" alt="メンバー紹介画像">
+                            </div>
+                            <div class="member__tag">
+                                <span>STAFF<span>
+                            </div>
+                            <div class="member__name">
+                                <p class="member__name--kanji">外山 将斗</p>
+                                <p class="member__name--romaji">TOYAMA MASATO</p>
+                            </div>
+                            <div class="member__discription">
+                                <p class="member__discription--title">好きな家具</p>
+                                <p class="member__discription--text">カラーボックス</p>
+                            </div>
+                        </div>
+                        <div class="member__item">
+                            <div class="member__img">
+                                <img src="./assets/images/characters/member_sample.svg" alt="メンバー紹介画像">
+                            </div>
+                            <div class="member__tag">
+                                <span>STAFF<span>
+                            </div>
+                            <div class="member__name">
+                                <p class="member__name--kanji">安藤 はるか</p>
+                                <p class="member__name--romaji">ANDO HARUKA</p>
+                            </div>
+                            <div class="member__discription">
+                                <p class="member__discription--title">好きな家具</p>
+                                <p class="member__discription--text">デスク</p>
+                            </div>
+                        </div>
+                        <div class="member__item">
+                            <div class="member__img">
+                                <img src="./assets/images/characters/member_sample.svg" alt="メンバー紹介画像">
+                            </div>
+                            <div class="member__tag">
+                                <span>STAFF<span>
+                            </div>
+                            <div class="member__name">
+                                <p class="member__name--kanji">尾作 泰央</p>
+                                <p class="member__name--romaji">OSAKU YASUO</p>
+                            </div>
+                            <div class="member__discription">
+                                <p class="member__discription--title">好きな家具</p>
+                                <p class="member__discription--text">二層式洗濯機</p>
+                            </div>
+                        </div>
+                        <div class="member__item">
+                            <div class="member__img">
+                                <img src="./assets/images/characters/member_sample.svg" alt="メンバー紹介画像">
+                            </div>
+                            <div class="member__tag">
+                                <span>STAFF<span>
+                            </div>
+                            <div class="member__name">
+                                <p class="member__name--kanji">田所 祐哉</p>
+                                <p class="member__name--romaji">TADOKORO YUYA</p>
+                            </div>
+                            <div class="member__discription">
+                                <p class="member__discription--title">好きな家具</p>
+                                <p class="member__discription--text">冷蔵庫</p>
+                            </div>
+                        </div>
+                        <div class="member__item">
+                            <div class="member__img">
+                                <img src="./assets/images/characters/member_chara.svg" alt="メンバー紹介画像">
+                            </div>
+                            <div class="member__tag">
+                                <span>キャラクター<span>
+                            </div>
+                            <div class="member__name">
+                                <p class="member__name--kanji">たかくらくん（仮）</p>
+                                <p class="member__name--romaji">TAKAKURA KUN</p>
+                            </div>
+                            <div class="member__discription chara">
+                                <p class="member__discription--text">社長をイメージして考えられた「たかくら引越センター」になくてはならないキャラクター。お名前募集中！</p>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="lineBtn__wrap">
-                <div class="lineBtn"><a href="">公式LINEスタンプ販売中！</a></div>
+                <div class="lineBtn"><a href="">公式LINEスタンプ販売中！</a><img src="./assets/images/characters/lineBtn_chara.svg" d alt=""></div>
             </div>
         </section>
         <section class="service__message lower__message">
