コーダチェック修正

--- a/src/index.html
+++ b/src/index.html
@@ -310,7 +310,7 @@
                     </div>
                 </div>
                 <div class="service__column--item bottom">
-                    <p class="service__column--title">荷物の保管※</p>
+                    <p class="service__column--title">荷物の保管<span class="asterisk">※</span></p>
                     <div class="service__column--img">
                         <img class="service__column--chara" src="./assets/images/top/service/img-service_chara4.svg"
                             alt="" />
@@ -591,15 +591,17 @@
                             TEL：0422-26-8520　FAX：0422-26-8521
                         </p>
                     </div>
-                    <a class="footer__tel" href="tel:0120374514">
-                        <div class="footer__tel--icon" href="#"><img src="./assets/images/icon_tel.svg" alt="tel" /></div>
-                        <div class="footer__telNumberInner">
-                            <p class="footer__telSpeech first">みんな</p>
-                            <p class="footer__telSpeech second">ヨッコイショ！</p>
-                            <p class="footer__telNumber">0120-37-4514</p>
-                            <p class="footer__reception">受付時間 ●：●～●：●</p>
-                        </div>
-                    </a>
+                    <div class="footer__tel--wrap">
+                        <a class="footer__tel" href="tel:0120374514">
+                            <div class="footer__tel--icon" href="#"><img src="./assets/images/icon_tel.svg" alt="tel" /></div>
+                            <div class="footer__telNumberInner">
+                                <p class="footer__telSpeech first">みんな</p>
+                                <p class="footer__telSpeech second">ヨッコイショ！</p>
+                                <p class="footer__telNumber">0120-37-4514</p>
+                                <p class="footer__reception">受付時間 ●：●～●：●</p>
+                            </div>
+                        </a>
+                    </div>
                 </div>
                 <div class="footerNav__container">
                     <div class="footerNav__column1">
