--- a/src/news.html
+++ b/src/news.html
@@ -164,32 +164,32 @@
                 <table class="news__table">
                     <tbody>
                         <tr>
-                            <th>23.12.25<button>information</button></th>
+                            <th>23.12.25<button>Information</button></th>
                             <td>タイトルが入ります。タイトルが入ります。タイトルが入ります。タイトルが入ります。</td>
                             <td><a href="./single.html"></a></td>
                         </tr>
                         <tr>
-                            <th>23.12.25<button>information</button></th>
+                            <th>23.12.25<button>Information</button></th>
                             <td>タイトルが入ります。タイトルが入ります。タイトルが入ります。タイトルが入ります。</td>
                             <td><a href="./single.html"></a></td>
                         </tr>
                         <tr>
-                            <th>23.12.25<button>information</button></th>
+                            <th>23.12.25<button>Information</button></th>
                             <td>タイトルが入ります。タイトルが入ります。タイトルが入ります。タイトルが入ります。</td>
                             <td><a href="./single.html"></a></td>
                         </tr>
                         <tr>
-                            <th>23.12.25<button>information</button></th>
+                            <th>23.12.25<button>Information</button></th>
                             <td>タイトルが入ります。タイトルが入ります。タイトルが入ります。タイトルが入ります。</td>
                             <td><a href="./single.html"></a></td>
                         </tr>
                         <tr>
-                            <th>23.12.25<button>information</button></th>
+                            <th>23.12.25<button>Information</button></th>
                             <td>タイトルが入ります。タイトルが入ります。タイトルが入ります。タイトルが入ります。</td>
                             <td><a href="./single.html"></a></td>
                         </tr>
                         <tr>
-                            <th>23.12.25<button>information</button></th>
+                            <th>23.12.25<button>Information</button></th>
                             <td>タイトルが入ります。タイトルが入ります。タイトルが入ります。タイトルが入ります。</td>
                             <td><a href="./single.html"></a></td>
                         </tr>
