--- a/src/service.html
+++ b/src/service.html
@@ -231,7 +231,7 @@
                         </svg>
                     </div>
                     <div class="point__column--text">
-                        <p>東京23区均衡を中心とし、千葉・神奈川・埼玉エリアの引越しを対応しております。また、長距離や引越しに関するお悩み、相談も受け付けておりますので、お気軽にお問い合わせください。</p>
+                        <p>東京23区近郊を中心とし、千葉・神奈川・埼玉エリアの引越しを対応しております。また、長距離や引越しに関するお悩み、相談も受け付けておりますので、お気軽にお問い合わせください。</p>
                     </div>
                 </div>
                 <div class="point__column--item bottom">
