--- a/src/single.html
+++ b/src/single.html
@@ -151,7 +151,7 @@
         <section class="single__post">
             <div class="single__content">
                 <div class="single__title">
-                    <div class="single__title--meta">23.12.25<button>information</button></div>
+                    <div class="single__title--meta">23.12.25<button>Information</button></div>
                     <div class="single__title--main">タイトルが入ります。タイトルが入ります。タイトルが入ります。タイトルが入ります。</div> 
                 </div>
                 <img class="single__img" src="./assets/images/news/single_sample.jpg" alt="記事画像">
