コーダチェック指摘点修正

--- a/src/about.html
+++ b/src/about.html
@@ -220,7 +220,7 @@
                     </div>
                     <p class="point__grid--title">日本一小さな引越し屋</p>
                     <div class="point__grid--text">
-                        <p>東京23区均衡を中心とし、千葉・神奈川・埼玉エリアの引越しを行っています。</p>
+                        <p>東京23区近郊を中心とし、千葉・神奈川・埼玉エリアの引越しを行っています。</p>
                     </div>
                 </div>
                 <div class="point__grid--item">
