--- a/src/index.html
+++ b/src/index.html
@@ -370,7 +370,7 @@
                         <div class="secretList__item--textArea">
                             <p class="secretList__speech">02</p>
                             <div class="page__subtitle twoColumnTitle">
-                                <h4>整理収納の達人が<br class="sp-br">引越しをサポート</h4>
+                                <h4>整理収納の達人が<br class="sp-br tb-br">引越しをサポート</h4>
                                 <!-- <picture>
                                     <source srcset="./assets/images/top/secret/img-secret_subtitle2-sp.png"
                                         media="(max-width: 767px)" />
@@ -395,7 +395,7 @@
                         <div class="secretList__item--textArea">
                             <p class="secretList__speech">03</p>
                             <div class="page__subtitle twoColumnTitle">
-                                <h4>日本一かわいい？<br class="sp-br">こだわりの段ボール</h4>
+                                <h4>日本一かわいい？<br class="sp-br tb-br">こだわりの段ボール</h4>
                                 <!-- <picture>
                                     <source srcset="./assets/images/top/secret/img-secret_subtitle3-sp.png"
                                         media="(max-width: 767px)" />
