コーダーチェック修正

--- a/src/news.html
+++ b/src/news.html
@@ -155,7 +155,7 @@
             </div>
             <div class="news__tag">
                 <ul>
-                    <li class="active">information</li>
+                    <li class="active tag__information">information</li>
                     <li>ブログ</li>
                     <li>お役立ちコラム</li>
                 </ul>
@@ -165,33 +165,33 @@
                     <tbody>
                         <tr>
                             <th>23.12.25<button>Information</button></th>
-                            <td>タイトルが入ります。タイトルが入ります。タイトルが入ります。タイトルが入ります。</td>
-                            <td><a href="./single.html"></a></td>
+                            <td><a href="./single.html">タイトルが入ります。タイトルが入ります。タイトルが入ります。タイトルが入ります。</a></td>
+                            <td></a></td>
                         </tr>
                         <tr>
                             <th>23.12.25<button>Information</button></th>
-                            <td>タイトルが入ります。タイトルが入ります。タイトルが入ります。タイトルが入ります。</td>
-                            <td><a href="./single.html"></a></td>
+                            <td><a href="./single.html">タイトルが入ります。タイトルが入ります。タイトルが入ります。タイトルが入ります。</a></td>
+                            <td></a></td>
                         </tr>
                         <tr>
                             <th>23.12.25<button>Information</button></th>
-                            <td>タイトルが入ります。タイトルが入ります。タイトルが入ります。タイトルが入ります。</td>
-                            <td><a href="./single.html"></a></td>
+                            <td><a href="./single.html">タイトルが入ります。タイトルが入ります。タイトルが入ります。タイトルが入ります。</a></td>
+                            <td></a></td>
                         </tr>
                         <tr>
                             <th>23.12.25<button>Information</button></th>
-                            <td>タイトルが入ります。タイトルが入ります。タイトルが入ります。タイトルが入ります。</td>
-                            <td><a href="./single.html"></a></td>
+                            <td><a href="./single.html">タイトルが入ります。タイトルが入ります。タイトルが入ります。タイトルが入ります。</a></td>
+                            <td></a></td>
                         </tr>
                         <tr>
                             <th>23.12.25<button>Information</button></th>
-                            <td>タイトルが入ります。タイトルが入ります。タイトルが入ります。タイトルが入ります。</td>
-                            <td><a href="./single.html"></a></td>
+                            <td><a href="./single.html">タイトルが入ります。タイトルが入ります。タイトルが入ります。タイトルが入ります。</a></td>
+                            <td></a></td>
                         </tr>
                         <tr>
                             <th>23.12.25<button>Information</button></th>
-                            <td>タイトルが入ります。タイトルが入ります。タイトルが入ります。タイトルが入ります。</td>
-                            <td><a href="./single.html"></a></td>
+                            <td><a href="./single.html">タイトルが入ります。タイトルが入ります。タイトルが入ります。タイトルが入ります。</a></td>
+                            <td></a></td>
                         </tr>
                     </tbody>
                 </table>
