--- a/src/service.html
+++ b/src/service.html
@@ -417,15 +417,16 @@
             <div class="introduction__column">
                 <div class="introduction__size">
                     <div class="size__tags">
-                        <div class="tag">小</div>
-                        <div class="tag active">大</div>
+                        <div class="tag small active">小</div>
+                        <div class="tag large">大</div>
                     </div>
                     <div class="size__img">
-                        <img src="./assets/images/service/detailed1.jpg" alt="">
+                        <img class="cardboard__img small__cardboard" src="./assets/images/service/introduction_large.png" alt="">
+                        <img class="cardboard__img large__cardboard" src="./assets/images/service/introduction_large.png" alt="">
                     </div>
                     <div class="size__pagenation">
-                        <div class="pagenation prev"></div>
-                        <div class="pagenation next"></div>
+                        <div class="pagenation prev small active"></div>
+                        <div class="pagenation next large"></div>
                     </div>
                 </div>
                 <div class="introduction__point">
