--- a/src/about.html
+++ b/src/about.html
@@ -46,7 +46,7 @@
     <header class="header">
         <div class="header__inner">
             <div class="headerLogo">
-                <img src="./assets/images/logo.svg" alt="たかくら引越センター" />
+                <a href="./index.html"><img src="./assets/images/logo.svg" alt="たかくら引越センター" /></a>
             </div>
             <div class="header__container">
                 <div class="snsNav">
@@ -61,7 +61,7 @@
                             <a href=""><img src="./assets/images/icon_line.svg" alt="line" /></a>
                         </li>
                         <li class="snsNav__list--item">
-                            <a href=""><img src="./assets/images/icon_tel.svg" alt="tel" /></a>
+                            <a href="tel:0120374514"><img src="./assets/images/icon_tel.svg" alt="tel" /></a>
                         </li>
                     </ul>
                 </div>
@@ -121,7 +121,7 @@
                         <a href="./estimate.html"><div class="estimate__btn"><img src="./assets/images/click.svg" alt=""><span>無料お見積もり</span></div></a>
                         <a href="tel:120374514">
                             <div class="tel__btn">                        
-                                <a class="tel__btn--icon" href="#"><img src="./assets/images/icon_tel.svg" alt="tel" /></a>
+                                <div class="tel__btn--icon"><img src="./assets/images/icon_tel.svg" alt="tel" /></div>
                                 <div class="telNumberInner">
                                     <p class="tel__telSpeech first">みんな</p>
                                     <p class="tel__telSpeech second">ヨッコイショ！</p>
@@ -430,29 +430,31 @@
                             TEL：0422-26-8520　FAX：0422-26-8521
                         </p>
                     </div>
-                    <div class="footer__tel">
-                        <a class="footer__tel--icon" href="#"><img src="./assets/images/icon_tel.svg" alt="tel" /></a>
-                        <div class="footer__telNumberInner">
-                            <p class="footer__telSpeech first">みんな</p>
-                            <p class="footer__telSpeech second">ヨッコイショ！</p>
-                            <p class="footer__telNumber">0120-37-4514</p>
-                            <p class="footer__reception">受付時間 ●：●～●：●</p>
-                        </div>
+                    <div class="footer__tel--wrap">
+                        <a class="footer__tel" href="tel:0120374514">
+                            <div class="footer__tel--icon" href="#"><img src="./assets/images/icon_tel.svg" alt="tel" /></div>
+                            <div class="footer__telNumberInner">
+                                <p class="footer__telSpeech first">みんな</p>
+                                <p class="footer__telSpeech second">ヨッコイショ！</p>
+                                <p class="footer__telNumber">0120-37-4514</p>
+                                <p class="footer__reception">受付時間 ●：●～●：●</p>
+                            </div>
+                        </a>
                     </div>
                 </div>
                 <div class="footerNav__container">
                     <div class="footerNav__column1">
                         <div class="footerNav spHide">
                             <ul class="footerNav__list">
-                                <li class="footerNav__list--item"><a href="#">▶HOME</a></li>
-                                <li class="footerNav__list--item"><a href="#">▶会社概要</a></li>
-                                <li class="footerNav__list--item"><a href="#">▶プライバシーポリシー</a></li>
-                                <li class="footerNav__list--item"><a href="#">▶お知らせ</a></li>
-                                <li class="footerNav__list--item"><a href="#">▶お見積もり</a></li>
-                                <li class="footerNav__list--item"><a href="#">▶特定商取引法に基づく表記</a></li>
-                                <li class="footerNav__list--item"><a href="#">▶サービス内容</a></li>
-                                <li class="footerNav__list--item"><a href="#">▶オンラインショップ</a></li>
-                                <li class="footerNav__list--item"><a href="#">▶標準引越運送約款</a></li>
+                                <li class="footerNav__list--item"><a href="#"><img src="./assets/images/triangle_right.svg" alt="">HOME</a></li>
+                                <li class="footerNav__list--item"><a href="#"><img src="./assets/images/triangle_right.svg" alt="">会社概要</a></li>
+                                <li class="footerNav__list--item"><a href="#"><img src="./assets/images/triangle_right.svg" alt="">プライバシーポリシー</a></li>
+                                <li class="footerNav__list--item"><a href="#"><img src="./assets/images/triangle_right.svg" alt="">お知らせ</a></li>
+                                <li class="footerNav__list--item"><a href="#"><img src="./assets/images/triangle_right.svg" alt="">お見積もり</a></li>
+                                <li class="footerNav__list--item"><a href="#"><img src="./assets/images/triangle_right.svg" alt="">特定商取引法に基づく表記</a></li>
+                                <li class="footerNav__list--item"><a href="#"><img src="./assets/images/triangle_right.svg" alt="">サービス内容</a></li>
+                                <li class="footerNav__list--item"><a href="#"><img src="./assets/images/triangle_right.svg" alt="">オンラインショップ</a></li>
+                                <li class="footerNav__list--item"><a href="#"><img src="./assets/images/triangle_right.svg" alt="">標準引越運送約款</a></li>
                             </ul>
                         </div>
                         <div class="footerBtn__inner">
