--- a/src/news.html
+++ b/src/news.html
@@ -36,7 +36,7 @@
     <header class="header">
         <div class="header__inner">
             <div class="headerLogo">
-                <img src="./assets/images/logo.svg" alt="たかくら引越センター" />
+                <a href="./index.html"><img src="./assets/images/logo.svg" alt="たかくら引越センター" /></a>
             </div>
             <div class="header__container">
                 <div class="snsNav">
@@ -51,7 +51,7 @@
                             <a href=""><img src="./assets/images/icon_line.svg" alt="line" /></a>
                         </li>
                         <li class="snsNav__list--item">
-                            <a href=""><img src="./assets/images/icon_tel.svg" alt="tel" /></a>
+                            <a href="tel:0120374514"><img src="./assets/images/icon_tel.svg" alt="tel" /></a>
                         </li>
                     </ul>
                 </div>
@@ -111,7 +111,7 @@
                         <a href="./estimate.html"><div class="estimate__btn"><img src="./assets/images/click.svg" alt=""><span>無料お見積もり</span></div></a>
                         <a href="tel:120374514">
                             <div class="tel__btn">                        
-                                <a class="tel__btn--icon" href="#"><img src="./assets/images/icon_tel.svg" alt="tel" /></a>
+                                <div class="tel__btn--icon"><img src="./assets/images/icon_tel.svg" alt="tel" /></div>
                                 <div class="telNumberInner">
                                     <p class="tel__telSpeech first">みんな</p>
                                     <p class="tel__telSpeech second">ヨッコイショ！</p>
@@ -245,14 +245,16 @@
                             TEL：0422-26-8520　FAX：0422-26-8521
                         </p>
                     </div>
-                    <div class="footer__tel">
-                        <a class="footer__tel--icon" href="#"><img src="./assets/images/icon_tel.svg" alt="tel" /></a>
-                        <div class="footer__telNumberInner">
-                            <p class="footer__telSpeech first">みんな</p>
-                            <p class="footer__telSpeech second">ヨッコイショ！</p>
-                            <p class="footer__telNumber">0120-37-4514</p>
-                            <p class="footer__reception">受付時間 ●：●～●：●</p>
-                        </div>
+                    <div class="footer__tel--wrap">
+                        <a class="footer__tel" href="tel:0120374514">
+                            <div class="footer__tel--icon" href="#"><img src="./assets/images/icon_tel.svg" alt="tel" /></div>
+                            <div class="footer__telNumberInner">
+                                <p class="footer__telSpeech first">みんな</p>
+                                <p class="footer__telSpeech second">ヨッコイショ！</p>
+                                <p class="footer__telNumber">0120-37-4514</p>
+                                <p class="footer__reception">受付時間 ●：●～●：●</p>
+                            </div>
+                        </a>
                     </div>
                 </div>
                 <div class="footerNav__container">
