コーダチェック修正

--- a/src/characters.html
+++ b/src/characters.html
@@ -490,7 +490,7 @@
                     新たな生活には、たくさんの出逢いや<br class="sp-br">発見があります。<br>
                     アナタの新生活のためのお引越し、<br class="sp-br">全力でサポートします！</p>
                 <div class="more__btn--container">
-                    <a class="more__btn" href="#">無料お見積もり</a>
+                    <a class="more__btn" href="./estimate.html">無料お見積もり</a>
                 </div>
             </div> 
         </section>
