--- a/src/news.html
+++ b/src/news.html
@@ -155,7 +155,7 @@
             </div>
             <div class="news__tag">
                 <ul>
-                    <li class="active tag__information">information</li>
+                    <li class="active tag__information">Information</li>
                     <li>ブログ</li>
                     <li>お役立ちコラム</li>
                 </ul>
